@@ -1,5 +1,6 @@
 1.0:
-  - Updated NLS-files: German.
+  - Show message with missed modulename if Lucide.dll cannot be loaded.
+  - Updated NLS-files: German, French.
 
 1.0 RC1:
   - Ask for password, if document password-protected.
